<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
     <include layout="@layout/title_two_button" />

            <EditText
                android:id="@+id/feedback_text"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:background="@drawable/search_rect_bg"
                android:hint="@string/feedback_advise"
                android:gravity="top|left|center"
                android:maxLength="549"
                android:paddingBottom="23.0dip"
                android:paddingLeft="6.0dip"
                android:paddingRight="6.0dip"
                android:paddingTop="6.0dip"
                android:scrollbars="vertical"
                android:textColor="#ff4e4e4e"
                android:textSize="16.0sp" />
            <EditText 
                android:id="@+id/feedback_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_email"/>
            <Button 
                android:id="@+id/feedback_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"/>

</LinearLayout>